--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' http://localhost:3000 https://sweet-heaven.onrender.com; img-src 'self' data: https:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; font-src 'self' data:;" />
-    <title>Sweet Heaven - Premium Sweets Shop</title>
+    <title>The Mithai Box</title>
     <style>
       :root {
         --logo-svg: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="45" fill="%23FF6B9D"/><path d="M50 20 L60 40 L80 40 L65 55 L72 75 L50 60 L28 75 L35 55 L20 40 L40 40 Z" fill="%23ffffff"/></svg>');
       }
     </style>
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='45' fill='%23FF6B9D'/><path d='M50 20 L60 40 L80 40 L65 55 L72 75 L50 60 L28 75 L35 55 L20 40 L40 40 Z' fill='%23ffffff'/></svg>" />
+   
   </head>
   <body>
     <div id="root"></div>
