--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' http://localhost:3000 https://sweet-heaven.onrender.com; img-src 'self' data: https:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; font-src 'self' data:;" />
+    <meta http-equiv="Content-Security-Policy" content="
+  connect-src 'self' http://localhost:3000  https://sweetshop-lk4l.onrender.com;
+">
+
     <title>The Mithai Box</title>
     <style>
       :root {
