--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="
-  connect-src 'self' http://localhost:3000  https://sweetshop-lk4l.onrender.com;
+  connect-src 'self' 
+  http://localhost:3000 
+  https://sweetshop-lk4l.onrender.com 
+  https://sweet-heaven.vercel.app;
 ">
+
 
     <title>The Mithai Box</title>
     <style>
